# ChangeLog for kde-base/kdm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdm/ChangeLog,v 1.388 2014/03/11 13:32:20 johu Exp $

  11 Mar 2014; Johannes Huber <johu@gentoo.org> -kdm-4.11.6.ebuild:
  Remove KDE Workspace 4.11.6

*kdm-4.11.7 (04 Mar 2014)

  04 Mar 2014; Johannes Huber <johu@gentoo.org> +kdm-4.11.7.ebuild:
  Version bump KDE Workspace 4.11.7

  23 Feb 2014; Agostino Sarubbo <ago@gentoo.org> -kdm-4.11.2.ebuild:
  Remove old

  23 Feb 2014; Agostino Sarubbo <ago@gentoo.org> kdm-4.11.5.ebuild:
  Stable for ppc64, wrt bug #493782

  20 Feb 2014; Agostino Sarubbo <ago@gentoo.org> kdm-4.11.5.ebuild:
  Stable for ppc, wrt bug #493782

  16 Feb 2014; Agostino Sarubbo <ago@gentoo.org> kdm-4.11.5.ebuild:
  Stable for x86, wrt bug #493782

  09 Feb 2014; Agostino Sarubbo <ago@gentoo.org> kdm-4.11.5.ebuild:
  Stable for amd64, wrt bug #493782

*kdm-4.11.6 (06 Feb 2014)

  06 Feb 2014; Andreas K. Huettel <dilfridge@gentoo.org> +kdm-4.11.6.ebuild:
  Version bump KDE SC 4.11.6

  20 Jan 2014; Michael Palimaka <kensington@gentoo.org> kdm-4.11.5.ebuild:
  Restore keywords that were accidentally omitted.

  10 Jan 2014; Chris Reffett <creffett@gentoo.org> -kdm-4.11.4.ebuild:
  Remove KDE SC 4.11.4

*kdm-4.11.5 (10 Jan 2014)

  10 Jan 2014; Chris Reffett <creffett@gentoo.org> +kdm-4.11.5.ebuild,
  files/kdm-4-gentoo-xinitrc.d.patch, files/kdm-logrotate, files/kdm.service:
  Bump KDE SC 4.11.5

  14 Dec 2013; Johannes Huber <johu@gentoo.org> -files/kdm-4.10.4-crypt.patch:
  Remove unused patch.

  12 Dec 2013; Agostino Sarubbo <ago@gentoo.org> -kdm-4.10.5-r1.ebuild:
  Remove old

  11 Dec 2013; Agostino Sarubbo <ago@gentoo.org> kdm-4.11.2.ebuild:
  Stable for ppc64, wrt bug #484884

  11 Dec 2013; Agostino Sarubbo <ago@gentoo.org> kdm-4.11.2.ebuild:
  Stable for ppc, wrt bug #484884

  10 Dec 2013; Agostino Sarubbo <ago@gentoo.org> kdm-4.11.2.ebuild:
  Stable for ppc, wrt bug #484884
