@@ -7,23 +7,24 @@ AUX kdm.service 262 SHA256 0ef99310cc6527fa49a81fc227f521d44347f3333ef6dd226f17b
 DIST kde-workspace-4.11.5.tar.xz 13714748 SHA256 3b99a3991d6d8b1aa4158da67ead30cabb815c07a6c8ee10751307f97d8613cf SHA512 311ef4f13a35f5e5d4b2eb60491d76aa8a47a25c7a565d7378c653b4d01d0d21d867deef9c658dff9bd14a02f1834d4781fed80129b5dc05d1490d34c656a281 WHIRLPOOL 3a853bc77e4beed8e1524a34061ba518b3ebe429e7873d58b30705516b743bcabc79124d01e59a2b9e1dc83cfd5128e8fc2d9fa5f2addb362a44ee53b4685c2d
 DIST kde-workspace-4.11.7.tar.xz 13535992 SHA256 7c0c2700ff232b291d9828d7a2bafc6d24dc546d8d921be2e37f7de4855958d8 SHA512 bae70ae26fc2ff4b9a92060c77cfecb8e2c9a33dd4648a279248266614d0ad93029d3894d127a5e792a97411478e6bc2139640f4a6c4063b133e73ab1cba18f3 WHIRLPOOL 331072416c380194500f9651b81d0b42740bc10430ee0ae82577073257b1b63d8a3975056bfd59f9064c1dbd4f926f631c351549d025bbfda6d0d568fe8d80e1
 EBUILD kdm-4.11.5.ebuild 4424 SHA256 3ba8166f60e40ff831b4be1aeab5f0cc1ccbd8bfc80fef98bea476a9d4bc65dd SHA512 55b105f60c30af654c6653481633f562c437dc15f03152b99ea987b7f653d79f816f233bba66c1558de16bc514f4b1b05a7c12391615db5e610cd96e87bbda91 WHIRLPOOL 1da1901fce3fc9cc01762811e78bacb84ad482cde74965668f89a5acb7bcf3c3245b6627342e6e8cf429b0e783e4285e60e8066d168ec565d33f4ede9763bb1e
+EBUILD kdm-4.11.7-r1.ebuild 4448 SHA256 2969731cb29d21213299f787e156c661a05265a6ba3b3fb8ed2221c437f1a3dd SHA512 21a2e2577a3138f5283c888b515028ebf5f96ddd0f377540022a4c3ec893ba48464ff67781dc8523615235bebb28ac0eb7128edad7d067d2b9b7d43b709e0d4a WHIRLPOOL ba0b79b22603cc0ea86382d2e486d9c32402473ae482d21abfa3ae18af91b0089dbcf5a2f085a1065bea1b17b659c1db8e989d00d8d9f46b925431d9b5a70f76
 EBUILD kdm-4.11.7.ebuild 4430 SHA256 7b879638e1654b2082e50fb4fa241b634de206674e284bb560507c041cb47621 SHA512 5932b8eddf7270e4a90c802faeed9b412745b617ce45697108c722b78fbea0c9296a43ffecb3a91939bf58209d891a92aff44cc9660c5369562ea674f577b58b WHIRLPOOL 19d704876b8ced417f198920e4ca4996c8ca401548700aa6fc7ac11245d3cd8dafbb7ac07bd71176a1b562fa1034f51f4a67a6d0e20e8ccc608c5a5ebfd8f385
-MISC ChangeLog 49931 SHA256 330e179fa0c7be82149eb52ef3522ad2aaf8ea1fc340c5a48267a64b163a5627 SHA512 f3cd2d484d932aefff7b50975ce3d85b3666dde1cfec0b1c1d82fc99d7b4b1c7f2acf84b5a016479bc782bcbfd99748e206d18b8d2c35087decba7893f4c14f3 WHIRLPOOL ca57a5a8574d2ad178613dd650531d1a0694a82138b9a528516c7e7838734ad397f757d6620b16da88227a992791286eef7ff4663240a68feb16cd8515dc2150
+MISC ChangeLog 50143 SHA256 9093a5db15f08f64126d4b57e58e5b6d125d82e98280db6f4fc19d20ac3afced SHA512 3516048b82321c4c01cbfbb68a18480d8093fa548ecdfed6b3a9d302811b4076d29ed0d3c7612a549348080197297e75f4bc306aa0194bed09cfb218e4478b08 WHIRLPOOL 41722ecce946daab60f63ab5b37cd6933979103153aa7caadc028f442ceb37539762d3931ac0508289a5fa0571ca71807216e52e000c0cbe3f87e8341cf16b9d
 MISC metadata.xml 253 SHA256 955ffc185b3b01315be94542ea43ae1180d5f61ea539a317c45c5746b463eeba SHA512 06787f52d5746dd3d5549c5fa2094f178e471c2684ec15b3e958ce0c36e84c2cc46156f688eb5f4ae7ab7802401d6e9208126dbea30aea81437848a6b8dc8eb6 WHIRLPOOL 134a8c5cd7eb97f9d9b75f95183a92d8b8c57bfbb840de26eb9df1d74468dbef47ab4714bccd9109cde2a11354ba34ea78edb7578312c530656cfab8ba03ecfe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTHwJSAAoJEGVpnaTzz9K936AP/icJ2D3wQyvVXJJspJ4mx9b7
-PQkp8Ivx76X44BRaVtGPHtEVmR+rIv0S3KVuKtR2atAO6eeXl+y+nneSlOnEjwG4
-oCAfINX9Zrjrpu+/0Hcr+f3Gfp+4s3YRYKw7SkCrhyYewkpDTn3NiOe3hcyYQOSq
-l1RVbWrBx7owEtugYTQdJKNSHNN11fNVkUsKThW4QyD3DRfHL/YLUTRCJq+Sbpio
-DTrYEo7NDOQV5t0FfxvdICkE15pqFu+hYI1dQJ8YiebXa+IhoxvCE5+Sm5fzuFEk
-4VJAiAQ6RWPfnRaNSy76EVoZBYY5CD2f+M7OHX25OSjUnC1JY9/H7KHWPIOw3Y+O
-EsYQqOejKM/yo3bwgTWRxTYMg/BIHQ8vMyvlXxO9ka7EcUttgDQDYjykNQn8NVp/
-Zopci1URB92LxaJ41dOwNCbGKJnwS/icU2jRFpGe9aMDnQ2J97ZWv23fnYHWX2YT
-4qwU5EpBNo7sZsitM6gTTe9SrofvuDWBwfIoAhcb+MMwagIBOZml4oMOo3NOqiv5
-XkkFcD15dAeG8rBxysTnktx5Pe0DJUpIIpjBXSOT+FRzElpccg8RrDbbt5TUzAmc
-VhfKwWZ7tub9qCgG8zGBE4obRj1Ok9d7jkYp6IJ6YgAKHSwN2SHQCixpDONmMhG3
-vhC4UvWD69ABr+HAVDYG
-=2Ajq
+iQIcBAEBCAAGBQJTJBWIAAoJEGVpnaTzz9K93KYQAInzLxnLt7OGy/skoQTUxLKA
+wID4h6A9Xsh+/ywP8YRIf77Nfrhooxufqw0lU5bD9hIQKW5jVhXi39YWL6WoDjID
+ng8Y+B56+k+X25YQOwtyM0hesYJyzW8qCgmJohPdXRg1VXMgINKlb8bgLgBHs89x
+0n3d0IFcOtPTmliowZSBbgCM+bmaca827J2lPL56OTUuuV3EUVOtQqW7yuvJK7rS
+2WTm4cQLKSum6vGKs66f3bumX4OTDgmsBrbdRwETrW/OLvMP2BBwbCxE1RR1SHpx
+y0fG2R5zvheRn7o8qiJ45QBrX4U6kSxEnrfOiE7wlz89zNoHdFz+QxaNOR1Vi9h2
+kQbKrt+56vtUjKqfez/McZtqDNnbjrthu/kgWGtHB48xys5kt5fylE23LGTp9YHx
+f/EbcJv6OdaRkwBNajCctJcFXs4uC0EabSUI9/WS/ccxHAXDvrRJrR81qUQ8EWya
+VegE/R5pbAHE2WsniSMu3uLNHNSOl/olrN4HxjNnz9tDrbvwg1vOCptd55GScm8o
+tHLCa+vv67P0MK0CX/7VhK37utlht09Lb/QVvIAlp8MJLfvN/PSIFUdb6++++lDo
+IMTuC1YEiQdMZEkvnLG3J/Lrd2JzgXuAHoq/zKQ7Sw1D6I5eRoWltoht/OeqSr5y
+rJeHnVlsxlQKXlkgFFlS
+=PDFU
 -----END PGP SIGNATURE-----
